--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,5 @@
-# Core FastAPI and ASGI server
-fastapi>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.0.0
-
-# Audio processing
-openai-whisper>=20231117
-pydub>=0.25.1
-numpy>=1.24.0
-
-# Document generation
-python-docx>=1.1.0
-
-# HTTP client and utilities
-python-multipart>=0.0.6
-
-# Environment and configuration
-python-dotenv>=1.0.0
+fastapi==0.104.1
+openai-whisper==20231117
+python-docx==1.1.0
+python-multipart==0.0.6
+pydub==0.25.1
