--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-fastapi==0.104.1
-openai-whisper==20231117
-python-docx==1.1.0
-python-multipart==0.0.6
-pydub==0.25.1
+fastapi
+openai-whisper
+python-docx
+python-multipart
